--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,8 @@
   --primary-color-hover: #FF69B4;
   --title-color: #FF69B4;
   --background-color: #fff0f5;
+  --secondary-color: #ffd6e3;
+  --accent-color: #e91e63;
 }
 
 body {
